client/src/app/video/video.component.scss
@mixin common-characteristics {
  width: fit-content;
  border: 0.1rem solid darkblue;
  border-right-color: #3939f3;
  border-bottom-color: #3939f3;
  overflow: hidden;
  cursor: zoom-in;
}

div.video {
  @include common-characteristics;
}

.video-and-controls {
  display: flex;
  flex-direction: column;
  align-items: center;
  > div:nth-child(2) {
    position: relative;
    height: 15px;
    > div {
      position: absolute;
    }
  }
}

div.multi {
  @include common-characteristics;
}

.mx-auto {
  margin-right: auto !important;
  margin-left: auto !important;
}

.row {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
}

div.latency-limit-selector {
  display: flex;
  justify-content: center;
  white-space: nowrap;

  > div {
    height: 25px;
    background-color: #646363;
    border-top: #3939f3 1px solid;
    border-bottom: black 1px solid;
    border-left: black 1px solid;
    border-right: black 1px solid;
    border-radius: 0.5rem;
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;
    display: block;
    position: relative;
    top: -5px;

    > label {
      > mat-icon {
        padding-left: 0.2rem;
      }
    }

    > label {
      margin-right: 5px;
      position: relative;
      top: 1px;

      > mat-icon {
        color: white;
      }
    }

    > select {
      color: white;
      background-color: #2d2d2d;
      margin-right: 4px;
      position: relative;
      top: -8px;
    }
  }
}

.audio-out-disabled {
  color: gray !important;
  cursor: pointer;
}

.audio-out-inactive {
  color: white !important;
  cursor: pointer;
}

.audio-out-active {
  animation: pulsing 1300ms infinite;
}

@keyframes pulsing {
  0% {
    color: #800;
  }
  50% {
    color: #f66;
  }
  100% {
    color: #800;
  }
}

@keyframes flash {
  0% {
    color: #650303;
  }
  50% {
    color: red;
  }
  100% {
    color: #650303;
  }
}

span.vid-time {
  font-size: medium;
  color: #c7cef3;
}
span.duration-time {
  font-size: medium;
  color: #858585;
}

.latency-chasing {
  > mat-icon {
    animation: flash 2000ms steps(3, start) forwards;
  }
}

